log
Mon 06 May 2024 06:12:58 PM UTC: 
 treemap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
3467cc7
Mon 06 May 2024 06:23:40 PM UTC: 
 treemap.c | 32 ++++++++++++++++++++++++++++++++
 1 file changed, 32 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:50:5: error: unknown type name ‘Tree_Node’; did you mean ‘TreeNode’?
   50 |     Tree_Node* newNode = malloc(sizeof(Tree_Node));
      |     ^~~~~~~~~
      |     TreeNode
treemap.c:50:40: error: ‘Tree_Node’ undeclared (first use in this function); did you mean ‘TreeNode’?
   50 |     Tree_Node* newNode = malloc(sizeof(Tree_Node));
      |                                        ^~~~~~~~~
      |                                        TreeNode
treemap.c:50:40: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:51:12: error: request for member ‘key’ in something not a structure or union
   51 |     newNode->key = key;
      |            ^~
treemap.c:52:12: error: request for member ‘data’ in something not a structure or union
   52 |     newNode->data = data;
      |            ^~
treemap.c:52:21: error: ‘data’ undeclared (first use in this function)
   52 |     newNode->data = data;
      |                     ^~~~
treemap.c:53:12: error: request for member ‘left’ in something not a structure or union
   53 |     newNode->left = NULL;
      |            ^~
treemap.c:54:12: error: request for member ‘right’ in something not a structure or union
   54 |     newNode->right = NULL;
      |            ^~
treemap.c:57:20: error: assignment to ‘TreeNode *’ from incompatible pointer type ‘int *’ [-Werror=incompatible-pointer-types]
   57 |         tree->root = newNode;
      |                    ^
treemap.c:59:20: error: ‘temp’ undeclared (first use in this function)
   59 |         Tree_Node* temp = tree->root;
      |                    ^~~~
treemap.c:60:15: error: ‘true’ undeclared (first use in this function)
   60 |         while(true) {
      |               ^~~~
treemap.c:5:1: note: ‘true’ is defined in header ‘<stdbool.h>’; did you forget to ‘#include <stdbool.h>’?
    4 | #include "treemap.h"
  +++ |+#include <stdbool.h>
    5 | 
cc1: all warnings being treated as errors
Compilation failed
0567297
